k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ranieri-staging
  labels:
    environment: staging
    app: ranieri-core
