k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranieri-service-staging
  namespace: ranieri-staging
  labels:
    app: ranieri-api-staging
spec:
  selector:
    app: ranieri-api-staging
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
